Update 1.3.0 Opplysninger om virksomheten.md
Formaterte innhold.

--- a/1.3.0 Opplysninger om virksomheten.md
+++ b/1.3.0 Opplysninger om virksomheten.md
@@ -1,16 +1,16 @@
-1.3.0 Opplysninger om virksomheten
-Navn: Marineholmen Makerspace Drift AS og Marineholmen Makerspace
-Postnr. og adresse: Thormøhlens gate 41 
-Postkode: 5006 Bergen
-Organisasjonsnummer:
-Selskapsform:
-Telefonnummer:
-Faxnummer:
-Firmamobil: 98441518 
-Mail-adresse: trygve@marinemaker.no
-Verneleder: Trygve Trohaug
-Tillitsvalgt: 
-Verne- og helsepersonale:
-Forsikringsselskap: Tryg Forsikring
-Hovedverneombud:
-Verneombud:
+# 1.3.0 Opplysninger om virksomheten
+## Navn: Marineholmen Makerspace Drift AS og Marineholmen Makerspace
+## Postnr. og adresse: Thormøhlens gate 41 
+## Postkode: 5006 Bergen
+## Organisasjonsnummer:
+## Selskapsform:
+## Telefonnummer:
+## Faxnummer:
+## Firmamobil: 98441518 
+## Mail-adresse: trygve@marinemaker.no
+## Verneleder: Trygve Trohaug
+## Tillitsvalgt: 
+## Verne- og helsepersonale:
+## Forsikringsselskap: Tryg Forsikring
+## Hovedverneombud:
+## Verneombud:
