--- a/1.4.0 Tilsynsmyndighetene.md
+++ b/1.4.0 Tilsynsmyndighetene.md
@@ -1,5 +1,4 @@
 ## 1.4.0 Tilsynsmyndighetene
-### Definisjon
 **************
 Myndighetene vil føre kontroll med at kravene i helse-, miljø- og sikkerhetslovgivningen oppfylles. Tilsynsmyndighetene vil også kunne veilede om forståelsen av forskriftens krav og prinsippene for internkontroll.
 Vårt system er utformet på dette grunnlag og vi vil hele tiden granske vår virksomhet, slik at HMS-arbeidet fungerer tilfredsstillende.
@@ -10,7 +9,7 @@ Følgende etater vil være tilsynsmyndighet etter Forskrift om systematisk helse
 Bestemmelsen fastslår hvem som skal forestå tilsynet med forskriften. 
 Ved å benytte systemrevisjoner og verifikasjoner vurderer tilsynsmyndighetene virksomhetenes helse-, miljø- og sikkerhetstilstand, og legger vekt på det forebyggende arbeidet med HMS. Det er ikke bare de direkte konsekvenser som skader, utslipp og sykefravær som vurderes. Tilsynsmyndighetene vil kunne veilede om forståelsen av forskriftens krav og prinsippene for internkontroll. Veiledningspliktens omfang er regulert i forvaltningsloven. Dersom virksomheten har tilknytning til bransjeorganisasjon eller liknende, er det dessuten mulig å få veiledning derfra bl.a. om hensiktsmessige løsninger i vedkommende bransje.
 
-## Følgende etater vil være tilsynsmyndighet etter forskriften:
+### Følgende etater vil være tilsynsmyndighet etter forskriften:
 **************************************************************
 ### Arbeidstilsynet (arbeidsmiljøloven)
 ### Direktoratet for samfunnssikkerhet og beredskap/kommunale brannvernmyndigheter (brann- og eksplosjonsvernloven)
@@ -22,3 +21,5 @@ Ved å benytte systemrevisjoner og verifikasjoner vurderer tilsynsmyndighetene v
 ### Direktoratet for naturforvaltning (genteknologiloven; utsetting av genmodifiserte organismer)
 ### Sosial- og helsedirektoratet (genteknologiloven; innesluttet bruk av genmodifiserte organismer)
 ### Statens strålevern (strålevernloven).
+*********************************************************************************************************************************************
+Ved å benytte systemrevisjoner og verifikasjoner vurderer tilsynsmyndighetene virksomhetenes helse-, miljø- og sikkerhetstilstand, og legger vekt på det forebyggende arbeidet med HMS. Det er ikke bare de direkte konsekvenser som skader, utslipp og sykefravær som vurderes. Tilsynsmyndighetene vil kunne veilede om forståelsen av forskriftens krav og prinsippene for internkontroll. Veiledningspliktens omfang er regulert i forvaltningsloven. Dersom virksomheten har tilknytning til bransjeorganisasjon eller liknende, er det dessuten mulig å få veiledning derfra bl.a. om hensiktsmessige løsninger i vedkommende bransje.
