--- a/2.1.0 Verneombudets oppgaver.md
+++ b/2.1.0 Verneombudets oppgaver.md
@@ -19,3 +19,56 @@
 ## Dersom verneombudet mener at det foreligger umiddelbar fare for arbeidstakernes liv eller helse, og faren ikke straks kan avverges på annen måte, kan arbeidet stanses inntil Arbeidstilsynet har tatt stilling til om arbeidet kan fortsette. Arbeidet må bare stanses i det omfang verneombudet anser det nødvendig for å avverge fare.
 ## Stansingen og grunnen til den skal omgående meldes til arbeidsgiveren eller dennes representant.
 ## Verneombudet er ikke erstatningsansvarlig for skade som påføres virksomheten som følge av at arbeidet stanses i henhold til bestemmelsen i første ledd.
+# Krav til arbeidsmiljøet
+ 
+## § 4-1* Generelle krav til arbeidsmiljøet
+### Arbeidsmiljøet i virksomheten skal være fullt forsvarlig ut fra en enkeltvis og samlet vurdering av faktorer i arbeidsmiljøet som kan innvirke på arbeidstakernes fysiske og psykiske helse og velferd. Standarden for sikkerhet, helse og arbeidsmiljø skal til enhver tid utvikles og forbedres i samsvar med utviklingen i samfunnet.
+### Ved planlegging og utforming av arbeidet skal det legges vekt på å forebygge skader og sykdommer. Arbeidets organisering, tilrettelegging og ledelse, arbeidstidsordninger, lønnssystemer, herunder bruk av prestasjonslønn, teknologi mv. skal være slik at arbeidstakerne ikke utsettes for uheldige fysiske eller psykiske belastninger og slik at sikkerhetshensyn ivaretas.
+### Det skal vurderes om det er særlig risiko knyttet til alenearbeid i virksomheten. Tiltak som er nødvendig for å forebygge og redusere eventuell risiko ved alenearbeid skal iverksettes, slik at lovens krav til et fullt forsvarlig arbeidsmiljø ivaretas.
+### Virksomheten skal innrettes for arbeidstakere av begge kjønn.
+### Atkomstveier, sanitæranlegg, arbeidsutstyr mv. skal så langt det er mulig og rimelig være utformet og innrettet slik at arbeidstakere med nedsatt funksjonsevne kan arbeide i virksomheten.
+### Departementet kan gi forskrift om begrensning i adgangen til å sysselsette visse grupper arbeidstakere som i særlig grad kan være utsatt for ulykkes- eller helsefare og om omplassering av slike arbeidstakere.
+### Departementet kan gi forskrift som pålegger bruk av identitetskort for arbeidstakere innenfor bransjer der det er nødvendig eller hensiktsmessig for å ivareta arbeidstakernes helse, miljø og sikkerhet og om oversiktslister over hvem som til enhver tid er sysselsatt på arbeidsplassen. Etter pålegg fra departementet plikter offentlige myndigheter uten hinder av taushetsplikt å gi utsteder av identitetskort alle opplysninger fra offentlige registre som er nødvendige for utstedelse av identitetskort.
+Endret ved lover 21 des 2005 nr. 121 (ikr. 1 jan 2006), 29 juni 2007 nr. 42 (ikr. 1 nov 2007 iflg. res. 12 okt 2007 nr. 1140), 20 juni 2008 nr. 42 (ikr. 1 jan 2009 iflg. res. 20 juni 2008 nr. 631), 19 juni 2009 nr. 39 (ikr. 1 jan 2010 iflg. res. 19 juni 2009 nr. 822).
+ 
+## § 4-2* Krav til tilrettelegging, medvirkning og utvikling
+## Arbeidstakerne og deres tillitsvalgte skal holdes løpende informert om systemer som nyttes ved planlegging og gjennomføring av arbeidet. De skal gis nødvendig opplæring for å sette seg inn i systemene, og de skal medvirke ved utformingen av dem.
+## I utformingen av den enkeltes arbeidssituasjon skal:
+### det legges til rette for at arbeidstaker gis mulighet for faglig og personlig utvikling gjennom sitt arbeid,
+### arbeidet organiseres og tilrettelegges under hensyn til den enkelte arbeidstakers arbeidsevne, kyndighet, alder og øvrige forutsetninger,
+### det legges vekt på å gi arbeidstaker mulighet til selvbestemmelse, innflytelse og faglig ansvar,
+### arbeidstaker så langt som mulig gis mulighet til variasjon og for å se sammenheng mellom enkeltoppgaver,
+### det gis tilstrekkelig informasjon og opplæring slik at arbeidstaker er i stand til å utføre arbeidet når det skjer endringer som berører vedkommendes arbeidssituasjon.
+## Under omstillingsprosesser som medfører endring av betydning for arbeidstakernes arbeidssituasjon, skal arbeidsgiver sørge for den informasjon, medvirkning og kompetanseutvikling som er nødvendig for å ivareta lovens krav til et fullt forsvarlig arbeidsmiljø.
+## Departementet kan i forskrift gi nærmere bestemmelser om gjennomføringen av kravene i denne paragraf.
+ 
+## § 4-3* Krav til det psykososiale arbeidsmiljøet
+## Arbeidet skal legges til rette slik at arbeidstakers integritet og verdighet ivaretas.
+## Arbeidet skal søkes utformet slik at det gir mulighet for kontakt og kommunikasjon med andre arbeidstakere i virksomheten.
+## Arbeidstaker skal ikke utsettes for trakassering eller annen utilbørlig opptreden.
+## Arbeidstaker skal, så langt det er mulig, beskyttes mot vold, trusler og uheldige belastninger som følge av kontakt med andre.
+## Departementet kan i forskrift gi nærmere bestemmelser om gjennomføringen av kravene i denne paragraf.
+ 
+## § 4-4* Krav til det fysiske arbeidsmiljøet
+## Fysiske arbeidsmiljøfaktorer som bygnings- og utstyrsmessige forhold, inneklima, lysforhold, støy, stråling o.l. skal være fullt forsvarlig ut fra hensynet til arbeidstakernes helse, miljø, sikkerhet og velferd.
+## Arbeidsplassen skal innredes og utformes slik at arbeidstaker unngår uheldige fysiske belastninger. Nødvendige hjelpemidler skal stilles til arbeidstakers disposisjon. Det skal legges til rette for variasjon i arbeidet og for å unngå tunge løft og ensformig gjentakelsesarbeid. Ved oppstilling og bruk av maskiner og annet arbeidsutstyr skal det sørges for at arbeidstaker ikke blir utsatt for uheldige belastninger ved vibrasjon, ubekvem arbeidsstilling o.l.
+## Maskiner og annet arbeidsutstyr skal være konstruert og ha nødvendige verneinnretninger slik at arbeidstaker er vernet mot skader.
+## Innkvartering som arbeidsgiver stiller til rådighet for arbeidstaker skal være forsvarlig utført, innredet og vedlikeholdt. Eventuelle husordensregler skal fastsettes i samråd med representanter for arbeidstakerne.
+## Departementet kan i forskrift gi nærmere bestemmelser om gjennomføringen av kravene i denne paragraf og kan herunder bestemme at reglene skal gjelde for utleiere av lokaler o.l.
+###Endret ved lov 21 des 2005 nr. 121 (ikr. 1 jan 2006).
+ 
+## § 4-5* Særlig om kjemisk og biologisk helsefare
+## Ved håndtering av kjemikalier eller biologisk materiale skal arbeidsmiljøet være tilrettelagt slik at arbeidstaker er sikret mot ulykker, helseskader og særlig ubehag. Kjemikalier og biologisk materiale skal fremstilles, pakkes, brukes og oppbevares slik at arbeidstaker ikke utsettes for helsefare.
+## Kjemikalier og biologisk materiale som kan innebære helsefare, skal ikke brukes dersom de kan erstattes med andre eller med en annen prosess som er mindre farlig for arbeidstakerne.
+## Virksomheten skal ha nødvendige rutiner og utstyr for å hindre eller motvirke helseskader på grunn av kjemikalier eller biologisk materiale.
+## Virksomheten skal føre kartotek over farlige kjemikalier og biologisk materiale. Kartoteket skal blant annet opplyse om fysikalske, kjemiske og helseskadelige egenskaper, forebyggende vernetiltak og førstehjelpsbehandling. Beholdere og emballasje for kjemikalier og biologisk materiale skal være tydelig merket med navn, sammensetning og advarsel på norsk.
+## Arbeidstilsynet kan i det enkelte tilfelle helt eller delvis gjøre unntak fra reglene i denne paragraf i forbindelse med forsknings- og analysearbeid e.l.
+## Departementet kan i forskrift gi nærmere bestemmelser om gjennomføringen av kravene i denne paragraf, og kan herunder bestemme at det skal føres register over arbeidstakere som eksponeres for bestemte kjemikalier eller biologisk materiale.
+## Departementet kan i forskrift gi nærmere bestemmelser om bruk, registrering, vurdering, godkjennelse, rapportering, informasjon, begrensning og annen behandling av kjemikalier.
+###Endret ved lov 5 des 2008 nr. 82 (ikr. 1 jan 2009 iflg. res. 5 des 2008 nr. 1284).
+ 
+## § 4-6* Særlig om tilrettelegging for arbeidstakere med redusert arbeidsevne
+## Hvis en arbeidstaker har fått redusert arbeidsevne som følge av ulykke, sykdom, slitasje e.l., skal arbeidsgiver, så langt det er mulig, iverksette nødvendige tiltak for at arbeidstaker skal kunne beholde eller få et passende arbeid. Arbeidstaker skal fortrinnsvis gis anledning til å fortsette i sitt vanlige arbeid, eventuelt etter særskilt tilrettelegging av arbeidet eller arbeidstiden, endringer i arbeidsutstyr, gjennomgått arbeidsrettede tiltak e.l.
+## Dersom det i medhold av første ledd er aktuelt å overføre en arbeidstaker til annet arbeid, skal arbeidstaker og arbeidstakers tillitsvalgte tas med på råd før saken avgjøres.
+## Arbeidsgiver skal i samråd med arbeidstaker utarbeide oppfølgingsplan for tilbakeføring til arbeid i forbindelse med ulykke, sykdom, slitasje eller lignende, med mindre dette er åpenbart unødvendig. Arbeidet med oppfølgingsplan skal starte så tidlig som mulig, og planen skal være utarbeidet senest når arbeidstaker har vært helt eller delvis borte fra arbeidet i seks uker. Oppfølgingsplanen skal inneholde en vurdering av arbeidstakers arbeidsoppgaver og arbeidsevne. Planen skal også inneholde aktuelle tiltak i arbeidsgivers regi, aktuelle tiltak med bistand fra myndighetene og plan for videre oppfølging.
+## Arbeidsgiver skal innkalle arbeidstaker til dialogmøte om innholdet i oppfølgingsplanen senest innen tolv uker etter at arbeidstaker har vært helt borte fra arbeidet som følge av ulykke, sykdom, slitasje eller lignende, med mindre dette er åpenbart unødvendig. Bedriftshelsetjenesten skal være representert i møtet. Dersom både arbeidsgiver og arbeidstaker, eller arbeidstaker alene ønsker det, skal legen eller annen sykmeldende behandler delta i møtet, jf. folketrygdloven § 25-5 første ledd andre punktum. Arbeidsgiver skal gi skriftlig melding om dialogmøtet til Arbeids- og velferdsetaten.
