Update 2.1.0 Verneombudets oppgaver.md
Formattering.

--- a/2.1.0 Verneombudets oppgaver.md
+++ b/2.1.0 Verneombudets oppgaver.md
@@ -19,6 +19,7 @@
 ## Dersom verneombudet mener at det foreligger umiddelbar fare for arbeidstakernes liv eller helse, og faren ikke straks kan avverges på annen måte, kan arbeidet stanses inntil Arbeidstilsynet har tatt stilling til om arbeidet kan fortsette. Arbeidet må bare stanses i det omfang verneombudet anser det nødvendig for å avverge fare.
 ## Stansingen og grunnen til den skal omgående meldes til arbeidsgiveren eller dennes representant.
 ## Verneombudet er ikke erstatningsansvarlig for skade som påføres virksomheten som følge av at arbeidet stanses i henhold til bestemmelsen i første ledd.
+
 # Krav til arbeidsmiljøet
  
 ## § 4-1* Generelle krav til arbeidsmiljøet
@@ -70,7 +71,8 @@ Endret ved lover 21 des 2005 nr. 121 (ikr. 1 jan 2006), 29 juni 2007 nr. 42 (ikr
 ## Arbeidstilsynet kan i det enkelte tilfelle helt eller delvis gjøre unntak fra reglene i denne paragraf i forbindelse med forsknings- og analysearbeid e.l.
 ## Departementet kan i forskrift gi nærmere bestemmelser om gjennomføringen av kravene i denne paragraf, og kan herunder bestemme at det skal føres register over arbeidstakere som eksponeres for bestemte kjemikalier eller biologisk materiale.
 ## Departementet kan i forskrift gi nærmere bestemmelser om bruk, registrering, vurdering, godkjennelse, rapportering, informasjon, begrensning og annen behandling av kjemikalier.
-### Endret ved lov 5 des 2008 nr. 82 (ikr. 1 jan 2009 iflg. res. 5 des 2008 nr. 1284).
+
+Endret ved lov 5 des 2008 nr. 82 (ikr. 1 jan 2009 iflg. res. 5 des 2008 nr. 1284).
  
 ## § 4-6* Særlig om tilrettelegging for arbeidstakere med redusert arbeidsevne
 ******************************************************************************************************************************************
