Update 2.1.0 Verneombudets oppgaver.md
Mer formattering.

--- a/2.1.0 Verneombudets oppgaver.md
+++ b/2.1.0 Verneombudets oppgaver.md
@@ -60,7 +60,8 @@ Endret ved lover 21 des 2005 nr. 121 (ikr. 1 jan 2006), 29 juni 2007 nr. 42 (ikr
 ## Maskiner og annet arbeidsutstyr skal være konstruert og ha nødvendige verneinnretninger slik at arbeidstaker er vernet mot skader.
 ## Innkvartering som arbeidsgiver stiller til rådighet for arbeidstaker skal være forsvarlig utført, innredet og vedlikeholdt. Eventuelle husordensregler skal fastsettes i samråd med representanter for arbeidstakerne.
 ## Departementet kan i forskrift gi nærmere bestemmelser om gjennomføringen av kravene i denne paragraf og kan herunder bestemme at reglene skal gjelde for utleiere av lokaler o.l.
-###Endret ved lov 21 des 2005 nr. 121 (ikr. 1 jan 2006).
+
+Endret ved lov 21 des 2005 nr. 121 (ikr. 1 jan 2006).
  
 ## § 4-5* Særlig om kjemisk og biologisk helsefare
 *******************************************************************************************************************************************
