Update 2.3.1 Varslingsplan ved alvorlige ulykker.md
Formatering.

--- a/2.3.1 Varslingsplan ved alvorlige ulykker.md
+++ b/2.3.1 Varslingsplan ved alvorlige ulykker.md
@@ -3,16 +3,25 @@
 En større ulykke i virksomheten krever koordinering og fullutnyttelse av egen beredskap i samarbeid med eksterne hjelpeapparat.
 En ulykkessituasjon er for de fleste en ny og skremmende opplevelse. Personers liv og helse, samt store materielle verdier kan stå på spill. Det er viktig at det er laget retningslinjer i virksomheten for hvordan slike situasjoner skal håndteres, og at dette blir gjennomgått og gjort kjent for alle.
 Alle i virksomheten bør få opplæring i hvordan organisering av en ulykkessituasjon skal skje. Det må også være klargjort for alle hvem som skal varsles i slike situasjoner.
-##VARSLING:
+**********************************************************
+## VARSLING:
 ### Nødvendig hjelpemannskap varsles først:
 ### Nødnummer: 110 – brann, 112 – politi, og 113 – ambulanse.
-### Den som oppdager / er involvert i hendelsen varsler ledelsen, som har ansvar for videre varsling:
- 
+*****************************************************************
+Den som oppdager / er involvert i hendelsen varsler ledelsen, som har ansvar for videre varsling.
+**************************************************************************************************************************
 ## Ledelsen skal:
 ### Varsle pårørende, liste over pårørendes navn og telefonnummer finnes tilgjengelig.
-### Dersom ulykken har ført til dødsfall bør det vurderes å trekke inn
-### eksternt hjelpeapparat til varsling (kommunens kriseteam).
+### Dersom ulykken har ført til dødsfall bør det vurderes å trekke inn eksternt hjelpeapparat til varsling (kommunens kriseteam).
 ## Virksomhetens ledelse har også ansvar for å varsle om alvorlige ulykker til:
 ### Arbeidstilsynet.
 ### Forsikringsselskap.
 ### NAV
+*************************************************************************************************************
+## Informasjon til media:
+Det er kun leder som informerer media på vegne av bedriften.
+*******************************************************************************************************
+## I samarbeid med helsepersonell bør det vurderes nødvendige oppfølgingstiltak:
+### Krisehjelp for de som er involvert i ulykken.
+### Tilbud om krisehjelp til pårørende.
+### Legge forholdene til rette for ansatte når de kommer tilbake i jobb etter en alvorlig hendelse.
